# gaming-on-a-mac

./: CMakeLists.txt  README.md  build_instructions.md  error_tracker.md  firmware_instructions.md  hardware_instructions.md  pico_sdk_import.cmake
Hardware/: gaming_on_a_mac.kicad_pcb  gaming_on_a_mac.kicad_prl  gaming_on_a_mac.kicad_pro  gaming_on_a_mac.kicad_sch
include/: config.h  encoder.h  matrix.h  oled.h  tusb_config.h  usb_hid.h
src/: encoder.c  main.c  matrix.c  oled.c  usb_descriptors.c  usb_hid.c
